refactor: flatten project structure for better GitHub visibility
- Move app/, requirements.txt, Dockerfile from backend/ to root
- Remove backend/ wrapper directory
- Update docker-compose.yml paths
- Update README project structure and Quick Start commands
- Remove Roadmap section from README

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ env/
 .DS_Store
 
 # Data (cached/generated)
-backend/data/cache/*.json
-backend/data/reports/*.json
+data/cache/*.json
+data/reports/*.json
 
 # Logs
 *.log
