--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   backend:
-    build: ./backend
+    build: .
     ports:
       - "8080:8080"
     env_file:
       - .env
     volumes:
-      - ./backend/data:/app/data
+      - ./data:/app/data
     restart: unless-stopped
