Harden Q&A output and enable long-context Nemotron runtime controls

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ TAVILY_API_KEY=your-tavily-api-key-here
 # LLM settings
 LLM_TEMPERATURE=0.3
 LLM_MAX_TOKENS=2000
+LLM_ENABLE_THINKING=false
 
 # Search settings
 MAX_SEARCH_RESULTS=10
