refactor: replace Tavily API with self-hosted SearXNG + Crawl4AI
- Rewrote search_service.py: search() now uses SearXNG HTTP API, extract_urls() and crawl_url() use Crawl4AI AsyncWebCrawler
- Updated config.py: TAVILY_API_KEY -> SEARXNG_BASE_URL
- Updated schemas.py: tavily_configured -> search_configured
- Updated main.py: 9 reference swaps (imports, health check, docstrings, startup log)
- Updated requirements.txt: tavily-python -> crawl4ai + tenacity
- Updated .env.example: removed Tavily API key placeholder

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 VLLM_BASE_URL=http://localhost:8000/v1/
 MODEL_NAME=nvidia/NVIDIA-Nemotron-3-Nano-30B-A3B-BF16
 
-# Tavily search API
-TAVILY_API_KEY=your-tavily-api-key-here
+# SearXNG self-hosted search
+SEARXNG_BASE_URL=http://localhost:8888
 
 # LLM settings
 LLM_TEMPERATURE=0.3
