--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ python-dotenv>=1.0.0
 pydantic>=2.0.0
 httpx>=0.27.0
 
-# AI / Agents
-crewai>=0.121.0
-tavily-python>=0.5.0
+# AI / Search / Scraping
+crawl4ai
+tenacity>=8.0.0
 
 # Utilities
 python-multipart>=0.0.9
